--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
 
 	<title>Template Layout</title>
 
+	<link href="css/styles.css" media="all" rel="stylesheet" type="text/css" />
+
 	<!--<script src="modernizr.custom.js"></script>-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 
-<style type="text/css" media="screen">
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
+	<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
 
-body { margin: 0px; padding: 0px; color: #333; background: #fff; }
-
-
-</style>
+	<style type="text/css" media="screen"></style>
+	<script type="text/javascript"></script>
 
 </head>
 	<body>
