--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="ru" > <!--<![endif]-->
 <head>
 
-	<meta charset="utf-8" />
+	<meta charset="UTF-8" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -14,35 +14,25 @@
 
 	<title>Default Template Layout</title>
 
-	<link href="css/styles.css" media="all" rel="stylesheet" type="text/css" />
+	<!-- Styles -->
+	<link href="assets/css/styles.css" media="all" rel="stylesheet" type="text/css" />
 
+	<!-- Libs -->
 	<script src="assets/js/libs/modernizr.custom.02435.js"></script>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
 
-	<style type="text/css" media="screen"></style>
-	<script type="text/javascript"></script>
+	<!-- Scripts -->
+	<script src="assets/js/main.js"></script>
 
 </head>
 	<body>
 
 
-		<!-- HTML Code Here -->
-
-
-<script>
-;(function ( $, window, document, undefined ) {
-
-
-	// JavaScript Code Here
-
-
-})( jQuery, window, document );
-</script>
-
+		<!-- Code Here -->
 
 
 	</body>
