--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
 	<meta http-equiv="imagetoolbar" content="false" />
 	<meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" />
@@ -15,25 +15,36 @@
 	<title>Default Template Layout</title>
 
 	<!-- Styles -->
+	<link href="assets/bower_components/normalize-css/normalize.css" media="all" rel="stylesheet" type="text/css" />
 	<link href="assets/css/styles.css" media="all" rel="stylesheet" type="text/css" />
 
 	<!-- Libs -->
 	<script src="assets/js/libs/modernizr.custom.02435.js"></script>
 
+	<script src="assets/js/libs/jquery-2.1.0.js"></script>
+	<script src="assets/js/libs/jquery-migrate-1.2.1.js"></script>
+
+	<!--
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
-
-	<!-- Scripts -->
-	<script src="assets/js/main.js"></script>
+	-->
 
 </head>
 	<body>
 
+		<div id="container">
 
-		<!-- Code Here -->
+			<h1>Default Simple Template Layout</h1>
+			<p></p>
 
+			<!-- Code Here -->
+
+		</div>
+
+		<!-- Scripts -->
+		<script src="assets/js/scripts.js"></script>
 
 	</body>
 </html>
